--- a/api/src/main/resources/custom_templates/model.mustache
+++ b/api/src/main/resources/custom_templates/model.mustache
@@ -66,6 +66,8 @@ import java.util.Arrays;
 {{#performBeanValidation}}
     import org.hibernate.validator.constraints.*;
 {{/performBeanValidation}}
+import io.swagger.annotations.ApiModelProperty;
+import io.swagger.annotations.ApiModel;
 
 {{#models}}
     {{#model}}
