--- a/api/src/main/resources/custom_templates/ApiClient.mustache
+++ b/api/src/main/resources/custom_templates/ApiClient.mustache
@@ -968,6 +968,7 @@ List<ClientHttpRequestInterceptor> currentInterceptors = this.restTemplate.getIn
                                                    ObjectMapper objectMapper = new ObjectMapper();
                                                    objectMapper.setSerializationInclusion(JsonInclude.Include.NON_NULL);
                                                    objectMapper.configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false);
+                                                   objectMapper.configure(DeserializationFeature.READ_UNKNOWN_ENUM_VALUES_AS_NULL, true);
                                                    objectMapper.registerModule(new JavaTimeModule());
                                                    objectMapper.registerModule(new JsonNullableModule());
                                                    return objectMapper;
