--- a/api/src/main/resources/custom_templates/api.mustache
+++ b/api/src/main/resources/custom_templates/api.mustache
@@ -403,6 +403,7 @@ import org.openapitools.jackson.nullable.JsonNullableModule;
         objectMapper.registerModule(new JsonNullableModule());
         objectMapper.setSerializationInclusion(JsonInclude.Include.NON_NULL);
         objectMapper.configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false);
+        objectMapper.configure(DeserializationFeature.READ_UNKNOWN_ENUM_VALUES_AS_NULL, true);
         return objectMapper;
     }
         }
