OKTA-610481: AppsApi - impl get sub class app and list sub class apps

--- a/api/src/main/resources/custom_templates/api.mustache
+++ b/api/src/main/resources/custom_templates/api.mustache
@@ -397,7 +397,7 @@ import org.openapitools.jackson.nullable.JsonNullableModule;
 
     {{/operation}}
 
-    private ObjectMapper getObjectMapper() {
+    protected static ObjectMapper getObjectMapper() {
         ObjectMapper objectMapper = new ObjectMapper();
         objectMapper.registerModule(new JavaTimeModule());
         objectMapper.registerModule(new JsonNullableModule());
