--- a/api/src/main/resources/custom_templates/ApiClient.mustache
+++ b/api/src/main/resources/custom_templates/ApiClient.mustache
@@ -92,7 +92,7 @@ import com.okta.sdk.cache.CacheManager;
 
 import com.okta.sdk.resource.common.PagedList;
 
-import org.openapitools.client.model.HttpMethod;
+import com.okta.sdk.resource.model.HttpMethod;
 
 import java.text.DateFormat;
 
