--- a/api/src/main/resources/custom_templates/ApiClient.mustache
+++ b/api/src/main/resources/custom_templates/ApiClient.mustache
@@ -1087,7 +1087,7 @@ protected List<ServerConfiguration> servers = new ArrayList<ServerConfiguration>
                                                                             * @return The response body in type of string
                                                                             * @throws ApiException API exception
                                                                             */
-                                                                            public <T> T invokeAPI(
+                                                                            public synchronized <T> T invokeAPI(
                                                                                 String path,
                                                                                 String method,
                                                                                 List<Pair> queryParams,
