--- a/api/src/main/resources/custom_templates/ApiClient.mustache
+++ b/api/src/main/resources/custom_templates/ApiClient.mustache
@@ -1,5 +1,5 @@
 {{!
-    Copyright (c) 2022-Present, Okta, Inc.
+    Copyright (c) 2025-Present, Okta, Inc.
 
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
@@ -68,7 +68,9 @@ import java.util.List;
 import java.util.Arrays;
 import java.util.ArrayList;
 import java.util.Date;
+import java.util.function.Supplier;
 import java.util.TimeZone;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
@@ -79,6 +81,7 @@ import java.io.InputStream;
 import java.io.IOException;
 import java.io.UnsupportedEncodingException;
 import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
 import java.nio.charset.UnsupportedCharsetException;
 import java.nio.file.Files;
 import java.nio.file.StandardCopyOption;
@@ -156,8 +159,8 @@ protected List<ServerConfiguration> servers = new ArrayList<ServerConfiguration>
 
     private Cache<String, Object> cache;
 
-    private int statusCode;
-    private Map<String, List<String>> responseHeaders;
+    private Map<Long, Integer> lastStatusCodeByThread = new ConcurrentHashMap<>();
+    private Map<Long, Map<String, List<String>>> lastResponseHeadersByThread = new ConcurrentHashMap<>();
 
         private DateFormat dateFormat;
 
@@ -316,16 +319,18 @@ protected List<ServerConfiguration> servers = new ArrayList<ServerConfiguration>
                     *
                     * @return Status code
                     */
+                    @Deprecated
                     public int getStatusCode() {
-                    return statusCode;
+                    return lastStatusCodeByThread.get(Thread.currentThread().getId());
                     }
 
                     /**
                     * Gets the response headers of the previous request
                     * @return Response headers
                     */
+                    @Deprecated
                     public Map<String, List<String>> getResponseHeaders() {
-                        return responseHeaders;
+                        return lastResponseHeadersByThread.get(Thread.currentThread().getId());
                         }
 
                         /**
@@ -392,6 +397,20 @@ protected List<ServerConfiguration> servers = new ArrayList<ServerConfiguration>
                             throw new RuntimeException("No Bearer authentication configured!");
                             }
 
+                            /**
+                            * Helper method to set the supplier of access tokens for Bearer authentication.
+                            *
+                            * @param tokenSupplier the token supplier function
+                            */
+                            public void setBearerToken(Supplier<String> tokenSupplier) {
+                            for (Authentication auth : authentications.values()) {
+                            if (auth instanceof HttpBearerAuth) {
+                            ((HttpBearerAuth) auth).setBearerToken(tokenSupplier);
+                            return;
+                            }
+                            }
+                            throw new RuntimeException("No Bearer authentication configured!");
+                            }
                         {{/hasHttpBearerMethods}}
 
                         {{#hasHttpBasicMethods}}
@@ -483,7 +502,7 @@ protected List<ServerConfiguration> servers = new ArrayList<ServerConfiguration>
                         * @param userAgent User agent
                         * @return API client
                         */
-                        public ApiClient setUserAgent(String userAgent) {
+                        public final ApiClient setUserAgent(String userAgent) {
                         addDefaultHeader("User-Agent", userAgent);
                         return this;
                         }
@@ -661,11 +680,11 @@ protected List<ServerConfiguration> servers = new ArrayList<ServerConfiguration>
                                 * @param value The value of the parameter.
                                 * @return A list of {@code Pair} objects.
                                 */
-                                public List<Pair> parameterToPairs(String collectionFormat, String name, Collection value) {
+                                public List<Pair> parameterToPairs(String collectionFormat, String name, Collection<?> value) {
                                     List<Pair> params = new ArrayList<Pair>();
 
                                         // preconditions
-                                        if (name == null || name.isEmpty() || value == null) {
+                                        if (name == null || name.isEmpty() || value == null || value.isEmpty()) {
                                         return params;
                                         }
 
@@ -827,7 +846,7 @@ protected List<ServerConfiguration> servers = new ArrayList<ServerConfiguration>
                                                     String mimeType = contentType.getMimeType();
                                                     if (isJsonMime(mimeType)) {
                                                     try {
-                                                    return new StringEntity(objectMapper.writeValueAsString(obj), ContentType.APPLICATION_JSON);
+                                                    return new StringEntity(objectMapper.writeValueAsString(obj), contentType.withCharset(StandardCharsets.UTF_8));
                                                     } catch (JsonProcessingException e) {
                                                     throw new ApiException(e);
                                                     }
@@ -894,8 +913,7 @@ protected List<ServerConfiguration> servers = new ArrayList<ServerConfiguration>
                                                                 if (mimeType == null || isJsonMime(mimeType)) {
                                                                 // Assume json if no mime type
                                                                 // convert input stream to string
-                                                                java.util.Scanner s = new java.util.Scanner(entity.getContent()).useDelimiter("\\A");
-                                                                String content = (String) (s.hasNext() ? s.next() : "");
+                                                                String content = EntityUtils.toString(entity);
 
                                                                 if ("".equals(content)) { // returns null for empty body
                                                                 return null;
@@ -915,15 +933,15 @@ protected List<ServerConfiguration> servers = new ArrayList<ServerConfiguration>
                                                                 return value instanceof List ? PagedList.constructPagedList(response, value) : value;
                                                                 } else if ("text/plain".equalsIgnoreCase(mimeType)) {
                                                                 // convert input stream to string
-                                                                java.util.Scanner s = new java.util.Scanner(entity.getContent()).useDelimiter("\\A");
-                                                                return (T) (s.hasNext() ? s.next() : "");
+                                                                return (T) EntityUtils.toString(entity);
                                                                 } else {
-                                                                throw new ApiException(
-                                                                "Deserialization for content type '" + mimeType + "' not supported for type '" + valueType + "'",
-                                                                response.getCode(),
-                                                                responseHeaders,
-                                                                EntityUtils.toString(entity)
-                                                                );
+                                                                Map<String, List<String>> responseHeaders = transformResponseHeaders(response.getHeaders());
+                                                                    throw new ApiException(
+                                                                    "Deserialization for content type '" + mimeType + "' not supported for type '" + valueType + "'",
+                                                                    response.getCode(),
+                                                                    responseHeaders,
+                                                                    EntityUtils.toString(entity)
+                                                                    );
                                                                 }
                                                                 }
 
@@ -969,16 +987,12 @@ protected List<ServerConfiguration> servers = new ArrayList<ServerConfiguration>
                                                                 return Files.createTempFile(Paths.get(tempFolderPath), prefix, suffix).toFile();
                                                                 }
 
-                                                                /**
-                                                                * Build full URL by concatenating base path, the given sub path and query parameters.
-                                                                *
-                                                                * @param path The sub path
-                                                                * @param queryParams The query parameters
-                                                                * @param collectionQueryParams The collection query parameters
-                                                                * @param urlQueryDeepObject URL query string of the deep object parameters
-                                                                * @return The full URL
-                                                                */
-                                                                private String buildUrl(String path, List<Pair> queryParams, List<Pair> collectionQueryParams, String urlQueryDeepObject) {
+                                                                    /**
+                                                                    * Returns the URL of the client as defined by the server (if exists) or the base path.
+                                                                    *
+                                                                    * @return The URL for the client.
+                                                                    */
+                                                                    public String getBaseURL() {
                                                                     String baseURL;
                                                                     if (serverIndex != null) {
                                                                     if (serverIndex < 0 || serverIndex >= servers.size()) {
@@ -990,6 +1004,20 @@ protected List<ServerConfiguration> servers = new ArrayList<ServerConfiguration>
                                                                     } else {
                                                                     baseURL = basePath;
                                                                     }
+                                                                    return baseURL;
+                                                                    }
+
+                                                                    /**
+                                                                    * Build full URL by concatenating base URL, the given sub path and query parameters.
+                                                                    *
+                                                                    * @param path The sub path
+                                                                    * @param queryParams The query parameters
+                                                                    * @param collectionQueryParams The collection query parameters
+                                                                    * @param urlQueryDeepObject URL query string of the deep object parameters
+                                                                    * @return The full URL
+                                                                    */
+                                                                    private String buildUrl(String path, List<Pair> queryParams, List<Pair> collectionQueryParams, String urlQueryDeepObject) {
+                                                                        String baseURL = getBaseURL();
 
                                                                     final StringBuilder url = new StringBuilder();
                                                                     url.append(baseURL).append(path);
@@ -1053,19 +1081,22 @@ protected List<ServerConfiguration> servers = new ArrayList<ServerConfiguration>
                                                                     }
 
                                                                     protected <T> T processResponse(CloseableHttpResponse response, TypeReference<T> returnType) throws ApiException, IOException, ParseException {
-                                                                        statusCode = response.getCode();
+                                                                        int statusCode = response.getCode();
+                                                                        lastStatusCodeByThread.put(Thread.currentThread().getId(), statusCode);
                                                                         if (statusCode == HttpStatus.SC_NO_CONTENT) {
                                                                         return null;
                                                                         }
 
-                                                                        responseHeaders = transformResponseHeaders(response.getHeaders());
-                                                                        if (isSuccessfulStatus(statusCode)) {
-                                                                        return this.deserialize(response, returnType);
-                                                                        } else {
-                                                                        String message = EntityUtils.toString(response.getEntity());
-                                                                        throw new ApiException(message, statusCode, responseHeaders, message);
-                                                                        }
-                                                                        }
+                                                                        Map<String, List<String>> responseHeaders = transformResponseHeaders(response.getHeaders());
+                                                                            lastResponseHeadersByThread.put(Thread.currentThread().getId(), responseHeaders);
+
+                                                                            if (isSuccessfulStatus(statusCode)) {
+                                                                            return this.deserialize(response, returnType);
+                                                                            } else {
+                                                                            String message = EntityUtils.toString(response.getEntity());
+                                                                            throw new ApiException(message, statusCode, responseHeaders, message);
+                                                                            }
+                                                                            }
 
                                                                         /**
                                                                         * Invoke API by sending HTTP request with the given options.
